deploy: cc8fc74bfd32406195b219c5190f8cb577716f5b

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html><html>
 <head>
 <meta name=generator content="Hugo 0.86.1">
-<title>Title</title>
+<title>Dhruva Gole</title>
 <meta charset=utf-8>
 <meta name=viewport content="width=device-width,initial-scale=1,user-scalable=no">
 <link rel=stylesheet href=https://dhruvag2000.github.io/assets/css/main.css>
@@ -22,7 +22,10 @@
 </div>
 <div class=content>
 <div class=inner>
-<h1>My New Hugo Site</h1>
+<h1>Dhruva Gole</h1>
+<p>
+Electrical Engineer
+</p>
 </div>
 </div>
 <nav>
