deploy: f1042d722efd4919a80ac315584f94058192e909

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ Electrical Engineer
 </div>
 <nav>
 <ul>
-<li><a href=https://dhruvag2000.github.io/content/>Dhruva Gole</a></li>
+<li><a href=https://dhruvag2000.github.io/projects/>Projects</a></li>
 </ul>
 </nav>
 </header>
