--- a/projects/index.html
+++ b/projects/index.html
@@ -1,10 +1,10 @@
 <!doctype html><html>
 <head>
-<title>Dhruva Gole</title>
+<title>Projects</title>
 <meta charset=utf-8>
 <meta name=viewport content="width=device-width,initial-scale=1,user-scalable=no">
 <link rel=stylesheet href=https://dhruvag2000.github.io/assets/css/main.css>
-<link rel=canonical href=https://dhruvag2000.github.io/content/>
+<link rel=canonical href=https://dhruvag2000.github.io/projects/>
 <noscript><link rel=stylesheet href=https://dhruvag2000.github.io/assets/css/noscript.css></noscript>
 <style>:root{--site-background:url("https://dhruvag2000.github.io/images/bg.jpg")}</style>
 <script src=https://identity.netlify.com/v1/netlify-identity-widget.js></script>
@@ -21,15 +21,14 @@
 </div>
 <div class=content>
 <div class=inner>
-<h1>Dhruva Gole</h1>
+<h1>Projects</h1>
 <p>
-Electrical Engineer
+A collection of my projects
 </p>
 </div>
 </div>
 <nav>
 <ul>
-<li><a href=https://dhruvag2000.github.io/content/blogs/>Projects</a></li>
 </ul>
 </nav>
 </header>
