deploy: 04cee80828aff8ce76f6136b8eb542d18820ca9b

--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 <title>Dhruva Gole</title>
 <meta charset=utf-8>
 <meta name=viewport content="width=device-width,initial-scale=1,user-scalable=no">
-<link rel=stylesheet href=https://dhruvagole.codes/assets/css/main.css>
-<link rel=canonical href=https://dhruvagole.codes/>
-<noscript><link rel=stylesheet href=https://dhruvagole.codes/assets/css/noscript.css></noscript>
-<style>:root{--site-background:url("https://dhruvagole.codes/images/bg.jpg")}</style>
+<link rel=stylesheet href=https://dhruvagole.tech/assets/css/main.css>
+<link rel=canonical href=https://dhruvagole.tech/>
+<noscript><link rel=stylesheet href=https://dhruvagole.tech/assets/css/noscript.css></noscript>
+<style>:root{--site-background:url("https://dhruvagole.tech/images/bg.jpg")}</style>
 <script src=https://identity.netlify.com/v1/netlify-identity-widget.js></script>
 </head>
 <body class=is-preload>
@@ -30,7 +30,7 @@ Electrical Engineer
 </div>
 <nav>
 <ul>
-<li><a href=https://dhruvagole.codes/projects/>Projects</a></li>
+<li><a href=https://dhruvagole.tech/projects/>Projects</a></li>
 </ul>
 </nav>
 </header>
@@ -42,9 +42,9 @@ Electrical Engineer
 </div>
 <div id=bg></div>
 </body>
-<script src=https://dhruvagole.codes/assets/js/jquery.min.js></script>
-<script src=https://dhruvagole.codes/assets/js/browser.min.js></script>
-<script src=https://dhruvagole.codes/assets/js/breakpoints.min.js></script>
-<script src=https://dhruvagole.codes/assets/js/util.js></script>
-<script src=https://dhruvagole.codes/assets/js/main.js></script>
+<script src=https://dhruvagole.tech/assets/js/jquery.min.js></script>
+<script src=https://dhruvagole.tech/assets/js/browser.min.js></script>
+<script src=https://dhruvagole.tech/assets/js/breakpoints.min.js></script>
+<script src=https://dhruvagole.tech/assets/js/util.js></script>
+<script src=https://dhruvagole.tech/assets/js/main.js></script>
 </html>
