deploy: 8bb37cb7d6eeef53c0111b48aea472c83b4ad8aa

--- a/index.html
+++ b/index.html
@@ -24,17 +24,26 @@
 <div class=inner>
 <h1>Dhruva Gole</h1>
 <p>
-Electrical Engineer
+Electrical Engineer, Embedded Developer
 </p>
 </div>
 </div>
 <nav>
 <ul>
+<li>
+<a href=#connect>Connect</a>
+</li>
 <li><a href=https://dhruvagole.tech/projects/>Projects</a></li>
 </ul>
 </nav>
 </header>
 <div id=main>
+<article id=connect>
+<h2 class=major>Connect</h2>
+<span class="image main"><img src alt></span>
+<p><a href=www.github.com/dhruvag2000>Github</a>
+<a href>LinkedIn</a></p>
+</article>
 </div>
 <footer id=footer>
 <p class=copyright>&copy; Design: <a href=https://github.com/d-asnaghi>d-asnaghi</a> and <a href=https://html5up.net>HTML5 UP</a>.</p>
