--- a/blogs/blogs/index.html
+++ b/blogs/blogs/index.html
@@ -1,11 +1,10 @@
 <!doctype html><html>
 <head>
-<meta name=generator content="Hugo 0.86.1">
-<title>Dhruva Gole</title>
+<title>Title</title>
 <meta charset=utf-8>
 <meta name=viewport content="width=device-width,initial-scale=1,user-scalable=no">
 <link rel=stylesheet href=https://dhruvagole.tech/assets/css/main.css>
-<link rel=canonical href=https://dhruvagole.tech/>
+<link rel=canonical href=https://dhruvagole.tech/blogs/blogs/>
 <noscript><link rel=stylesheet href=https://dhruvagole.tech/assets/css/noscript.css></noscript>
 <style>:root{--site-background:url("https://dhruvagole.tech/images/bg.jpg")}</style>
 <script src=https://identity.netlify.com/v1/netlify-identity-widget.js></script>
@@ -14,46 +13,17 @@
 <div id=wrapper>
 <header id=header>
 <div class=logo>
-<a href=/>
-<span class=icon>
-<img src>
-</span>
-</a>
+<span class="icon fa-gem"></span>
 </div>
 <div class=content>
 <div class=inner>
-<h1>Dhruva Gole</h1>
+<h1><a href=/>Go Home</a></h1>
 <p>
-Electrical Engineer, Embedded Developer
+Nothing to see here
 </p>
 </div>
 </div>
-<nav>
-<ul>
-<li>
-<a href=#blogs>Blogs</a>
-</li>
-<li>
-<a href=#connect>Connect</a>
-</li>
-<li><a href=https://dhruvagole.tech/projects/>Projects</a></li>
-</ul>
-</nav>
 </header>
-<div id=main>
-<article id=blogs>
-<h2 class=major>Blogs</h2>
-<span class="image main"><img src alt></span>
-<p><a href=https://dhruvag2000.github.io/Blog-GSoC21/>GSoC2021: Bela support for BeagleBone AI</a></p>
-<p><a href=https://dhruvag2000.github.io/gdb-for-noobs/>GNU Debugger for Noobs</a></p>
-</article>
-<article id=connect>
-<h2 class=major>Connect</h2>
-<span class="image main"><img src alt></span>
-<p><a href=www.github.com/dhruvag2000>Github</a>
-<a href>LinkedIn</a></p>
-</article>
-</div>
 <footer id=footer>
 <p class=copyright>&copy; Design: <a href=https://github.com/d-asnaghi>d-asnaghi</a> and <a href=https://html5up.net>HTML5 UP</a>.</p>
 </footer>
