deploy: eb25ce43bed6cb7d3e21304f2c3a7eb9434dc9ba

--- a/index.html
+++ b/index.html
@@ -33,9 +33,7 @@ Electrical Engineer, Embedded Developer
 <li>
 <a href=#blogs>Blogs</a>
 </li>
-<li>
-<a href=#connect>Connect</a>
-</li>
+<li><a href=https://dhruvagole.tech/connect/>Connect</a></li>
 <li><a href=https://dhruvagole.tech/projects/>Projects</a></li>
 </ul>
 </nav>
@@ -46,12 +44,6 @@ Electrical Engineer, Embedded Developer
 <span class="image main"><img src alt></span>
 <p><a href=https://dhruvag2000.github.io/Blog-GSoC21/>GSoC2021: Bela support for BeagleBone AI</a></p>
 <p><a href=https://dhruvag2000.github.io/gdb-for-noobs/>GNU Debugger for Noobs</a></p>
-</article>
-<article id=connect>
-<h2 class=major>Connect</h2>
-<span class="image main"><img src alt></span>
-<p><a href=www.github.com/dhruvag2000>Github</a>
-<a href>LinkedIn</a></p>
 </article>
 </div>
 <footer id=footer>
