deploy: a2ec63efc2b0fcf55d6326b89605eabf6dda341e

--- a/blogs/gsoc21/index.html
+++ b/blogs/gsoc21/index.html
@@ -1,10 +1,10 @@
 <!doctype html><html>
 <head>
-<title>Title</title>
+<title>GSoC2021</title>
 <meta charset=utf-8>
 <meta name=viewport content="width=device-width,initial-scale=1,user-scalable=no">
 <link rel=stylesheet href=https://dhruvagole.tech/assets/css/main.css>
-<link rel=canonical href=https://dhruvagole.tech/blogs/blogs/>
+<link rel=canonical href=https://dhruvagole.tech/blogs/gsoc21/>
 <noscript><link rel=stylesheet href=https://dhruvagole.tech/assets/css/noscript.css></noscript>
 <style>:root{--site-background:url("https://dhruvagole.tech/images/bg.jpg")}</style>
 <script src=https://identity.netlify.com/v1/netlify-identity-widget.js></script>
