--- a/blogs/index.html
+++ b/blogs/index.html
@@ -6,7 +6,7 @@
 <link rel=stylesheet href=https://dhruvagole.tech/assets/css/main.css>
 <link rel=canonical href=https://dhruvagole.tech/blogs/>
 <noscript><link rel=stylesheet href=https://dhruvagole.tech/assets/css/noscript.css></noscript>
-<style>:root{--site-background:url("https://dhruvagole.tech/images/bg.jpg")}</style>
+<style>:root{--site-background:url("https://dhruvagole.tech/images/codebinary.jpg")}</style>
 <script src=https://identity.netlify.com/v1/netlify-identity-widget.js></script>
 </head>
 <body class=is-preload>
@@ -15,7 +15,7 @@
 <div class=logo>
 <a href=/>
 <span class=icon>
-<img src>
+<img src=https://developers.google.com/open-source/gsoc/resources/downloads/GSoC-icon-192.png>
 </span>
 </a>
 </div>
@@ -26,10 +26,130 @@
 </div>
 <nav>
 <ul>
+<li>
+<a href=#gdb>GDB</a>
+</li>
+<li>
+<a href=#gsoc2021>GSoC2021</a>
+</li>
 </ul>
 </nav>
 </header>
 <div id=main>
+<article id=gdb>
+<h2 class=major>GDB</h2>
+<span class="image main"><img src alt></span>
+<p><a href=https://dhruvag2000.github.io/gdb-for-noobs/>GDB for Noobs</a></p>
+<h2 id=why-use-a-debugger>Why use a debugger?</h2>
+<p>Most of us tend to have bugs in our code. We could use printing commands to test our code, or we could use a debugger. Many times our code might seem to work correctly, because we didn&rsquo;t test it under enough scenarios. Other times we know there&rsquo;s a bug, but by just reading the code we don&rsquo;t notice it is there. Thus, we should develop a habit of launching a debugger when we get into trouble.</p>
+<h2 id=walkthrough>Walkthrough</h2>
+<ul>
+<li>
+<p>for compiling your code to make it suitable for debugging using gdb:</p>
+<div class=highlight><pre tabindex=0 style=color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4><code class=language-bash data-lang=bash>g++ -g <span style=color:#e6db74>&#34;buggy_factorial.cpp&#34;</span>
+</code></pre></div></li>
+<li>
+<p>launching the gdb shell:</p>
+<div class=highlight><pre tabindex=0 style=color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4><code class=language-bash data-lang=bash>gdb a.out
+</code></pre></div></li>
+<li>
+<p>basic commands we will be needing:</p>
+<ul>
+<li><code>(gdb) run</code> : runs the program.</li>
+<li><code>(gdb) break file1.c:6</code> : Breakpoints can be used to stop the program run in the middle, at a designated point (we will see how its useful in the following example).</li>
+<li><code>(gdb) break myfunc</code>: creates breakpoint at <code>myfunc</code> <strong>remember to use myfunc without the ()</strong></li>
+<li><code>(gdb) step</code> or <code>(gdb) s</code> : execute just the next line of code.</li>
+<li><code>(gdb) print (gdb) </code> or <code>(gdb) p (gdb) </code> : prints the value of the variable.</li>
+<li><code>(gdb) watch myvar</code>: whenever myvar’s value is modified, the program will interrupt and print out the old and new values.
+trivial one&rsquo;s below&mldr;</li>
+<li><code>finish </code> : runs until the current function is finished.</li>
+<li><code>delete</code> : deletes a specified breakpoint.</li>
+<li><code>info breakpoints</code> : shows information about all declared breakpoints.</li>
+</ul>
+</li>
+<li>
+<p>explanation with example:</p>
+<ul>
+<li>
+<p>First, let&rsquo;s just run the code..
+command:</p>
+<pre><code>run
+</code></pre><p>output:</p>
+<pre><code>Starting program: /home/dhruva/Documents/studies/maths/gdb-for-noobs/a.out
+enter any number:
+4
+The factorial of 4 is 1[Inferior 1 (process 14193) exited normally]
+</code></pre><p>oops! Clearly the answer is wrong!!
+Now, as a very inexperienced programmer, one would try to print at every iteration to see where the program might have gone wrong resulting in a very ugly looking code and also adding the unnecessary headache of having to track the line number of each print statement one had used for debugging their codes.
+Now, let&rsquo;s see how gdb simplifies things for us&mldr;</p>
+</li>
+<li>
+<p>creating breakpoints:
+Since my factorial function is most probably messing up, I will add the breakpoint to it.
+command:</p>
+<pre><code>break factorial
+</code></pre><p>output:</p>
+<pre><code>Breakpoint 1 at 0x555555554993: file buggy_factorial.cpp, line 5.
+</code></pre><p>now lets run it again&mldr; using <code>run</code>
+output:</p>
+<pre><code>Starting program: /home/dhruva/Documents/studies/maths/gdb-for-noobs/a.out
+enter any number:
+4
+
+Breakpoint 1, factorial (n=4) at buggy_factorial.cpp:5
+5	  double res=1;
+</code></pre><p>as we can see, the program stopped just as the function was called. Now, instead of needing to manually add <code>print()</code> statements I will see why my code is buggy by watching the variables in my console itself!</p>
+</li>
+<li>
+<p>watching the variable
+Since it is likely that some variable is not working properly, let&rsquo;s start by watching the <code>res</code> variable.
+command:
+<code>watch res</code>
+now the gdb console works in such a way that hitting enter will automatically take you to the next step where you expect to see some change in your variable as the while loop modifies it in each iteration&mldr;
+hmm&mldr; something strange, the res variable isn&rsquo;t updating!
+Well, so now that I observe that <code>res</code> isn&rsquo;t updating, the only reason I think is it must not be entering the while loop for some reason!</p>
+<p>OK! So now I go back ad make changes in my while loop condition to
+<code>while(n>=1)</code></p>
+</li>
+<li>
+<p>Let&rsquo;s see if the issue is fixed!
+Press <code>q</code> and then <code>y</code> to exit the gdb, and again compile your new program:</p>
+<ul>
+<li>
+<p><code>g++ -g factorial.cpp -o fact</code></p>
+</li>
+<li>
+<p><code>gdb fact</code></p>
+</li>
+<li>
+<p><code>run</code></p>
+</li>
+<li>
+<p>output:</p>
+<pre><code>Starting program: /home/dhruva/Documents/studies/maths/gdb-for-noobs/fact
+enter any number:
+4
+The factorial of 4 is 24[Inferior 1 (process 15039) exited normally]
+</code></pre></li>
+</ul>
+</li>
+</ul>
+</li>
+</ul>
+<p>Thus using GDB we learned to debug a very basic code in c++. You can also try the other commands listed on top as per your own convenience and requirements.</p>
+<h2 id=sources>sources:</h2>
+<ul>
+<li><a href=https://www.cs.umd.edu/~srhuang/teaching/cmsc212/gdb-tutorial-handout.pdf>gdb-tutorial-handout</a></li>
+<li><a href=http://www.math.bas.bg/~nkirov/2005/netb151/debugging-with-gdb.html>debugging-with-gdb</a></li>
+</ul>
+</article>
+<article id=gsoc2021>
+<h2 class=major>GSoC2021</h2>
+<span class="image main"><img src alt></span>
+<p><img src=https://developers.google.com/open-source/gsoc/resources/downloads/GSoC-logo-horizontal-200.png alt></p>
+<p><a href=https://dhruvag2000.github.io/Blog-GSoC21/>GSoC2021: Bela support for BeagleBone AI</a></p>
+<p>Bela is a hardware and software system for creating beautiful interaction with sensors and sound. This project proposes to provide restructuring and improvement of existing Bela Software Code to allow for compatibility and easier transition to newer TI chips (like in the BBAI).</p>
+</article>
 </div>
 <footer id=footer>
 <p class=copyright>&copy; Design: <a href=https://github.com/d-asnaghi>d-asnaghi</a> and <a href=https://html5up.net>HTML5 UP</a>.</p>
