deploy: a3b857271798ccbd639f6c2ea8b8d55fb978f277

--- a/projects/index.html
+++ b/projects/index.html
@@ -6,7 +6,7 @@
 <link rel=stylesheet href=https://dhruvagole.tech/assets/css/main.css>
 <link rel=canonical href=https://dhruvagole.tech/projects/>
 <noscript><link rel=stylesheet href=https://dhruvagole.tech/assets/css/noscript.css></noscript>
-<style>:root{--site-background:url("https://dhruvagole.tech/images/bg.jpg")}</style>
+<style>:root{--site-background:url("https://dhruvagole.tech/images/darkckt.jpeg")}</style>
 <script src=https://identity.netlify.com/v1/netlify-identity-widget.js></script>
 </head>
 <body class=is-preload>
@@ -29,10 +29,26 @@ A collection of my projects
 </div>
 <nav>
 <ul>
+<li>
+<a href=#pico-dev-board>Pico Dev Board</a>
+</li>
+<li>
+<a href=#weather-monitor>Weather Monitor</a>
+</li>
 </ul>
 </nav>
 </header>
 <div id=main>
+<article id=pico-dev-board>
+<h2 class=major>Pico Dev Board</h2>
+<span class="image main"><img src alt></span>
+<p>Link to project: <a href=https://github.com/DhruvaG2000/RP2040_Dev_Board>RP2040_Dev_Board</a></p>
+</article>
+<article id=weather-monitor>
+<h2 class=major>Weather Monitor</h2>
+<span class="image main"><img src alt></span>
+<p>Link to Project: <a href=https://github.com/DhruvaG2000/ESP32_wifiDHT11>ESP32 Wifi DHT</a></p>
+</article>
 </div>
 <footer id=footer>
 <p class=copyright>&copy; Design: <a href=https://github.com/d-asnaghi>d-asnaghi</a> and <a href=https://html5up.net>HTML5 UP</a>.</p>
