--- a/connect/connect/index.html
+++ b/connect/connect/index.html
@@ -1,46 +1,29 @@
 <!doctype html><html>
 <head>
-<title>Connect</title>
+<title>Social Media</title>
 <meta charset=utf-8>
 <meta name=viewport content="width=device-width,initial-scale=1,user-scalable=no">
 <link rel=stylesheet href=https://dhruvagole.tech/assets/css/main.css>
-<link rel=canonical href=https://dhruvagole.tech/connect/>
+<link rel=canonical href=https://dhruvagole.tech/connect/connect/>
 <noscript><link rel=stylesheet href=https://dhruvagole.tech/assets/css/noscript.css></noscript>
-<style>:root{--site-background:url("https://dhruvagole.tech/images/coffee.png")}</style>
+<style>:root{--site-background:url("https://dhruvagole.tech/images/bg.jpg")}</style>
 <script src=https://identity.netlify.com/v1/netlify-identity-widget.js></script>
 </head>
 <body class=is-preload>
 <div id=wrapper>
 <header id=header>
 <div class=logo>
-<a href=/>
-<span class=icon>
-<img src>
-</span>
-</a>
+<span class="icon fa-gem"></span>
 </div>
 <div class=content>
 <div class=inner>
-<h1>Connect</h1>
+<h1><a href=/>Go Home</a></h1>
+<p>
+Nothing to see here
+</p>
 </div>
 </div>
-<nav>
-<ul>
-<li>
-<a href=#social-media>Social Media</a>
-</li>
-</ul>
-</nav>
 </header>
-<div id=main>
-<article id=social-media>
-<h2 class=major>Social Media</h2>
-<span class="image main"><img src alt></span>
-<p><a href=https://github.com/dhruvag2000>Github</a></p>
-<p><a href=https://www.linkedin.com/in/dhruva-gole/>LinkedIn</a></p>
-<p><a href=https://twitter.com/DhruvaGole>Twitter</a></p>
-</article>
-</div>
 <footer id=footer>
 <p class=copyright>&copy; Design: <a href=https://github.com/d-asnaghi>d-asnaghi</a> and <a href=https://html5up.net>HTML5 UP</a>.</p>
 </footer>
