--- a/index.html
+++ b/index.html
@@ -31,21 +31,12 @@ Electrical Engineer, Embedded Developer
 <nav>
 <ul>
 <li><a href=https://dhruvagole.tech/blogs/>Blogs</a></li>
-<li>
-<a href=#connect>Connect</a>
-</li>
+<li><a href=https://dhruvagole.tech/connect/>Connect</a></li>
 <li><a href=https://dhruvagole.tech/projects/>Projects</a></li>
 </ul>
 </nav>
 </header>
 <div id=main>
-<article id=connect>
-<h2 class=major>Connect</h2>
-<span class="image main"><img src alt></span>
-<p><a href=https://github.com/dhruvag2000>Github</a></p>
-<p><a href=https://www.linkedin.com/in/dhruva-gole/>LinkedIn</a></p>
-<p><a href=https://twitter.com/DhruvaGole>Twitter</a></p>
-</article>
 </div>
 <footer id=footer>
 <p class=copyright>&copy; Design: <a href=https://github.com/d-asnaghi>d-asnaghi</a> and <a href=https://html5up.net>HTML5 UP</a>.</p>
