deploy: 52efca359bf627ff626290c2819dd0833c0aed6f

--- a/blogs/index.html
+++ b/blogs/index.html
@@ -146,7 +146,9 @@ The factorial of 4 is 24[Inferior 1 (process 15039) exited normally]
 <article id=gsoc2021>
 <h2 class=major>GSoC2021</h2>
 <span class="image main"><img src alt></span>
-<p><img src=https://developers.google.com/open-source/gsoc/resources/downloads/GSoC-logo-horizontal-200.png alt></p>
+<p>
+<span class="image fit"><img src=/images/gsoc-intro.png alt></span>
+</p>
 <p><a href=https://dhruvag2000.github.io/Blog-GSoC21/>GSoC2021: Bela support for BeagleBone AI</a></p>
 <p>Bela is a hardware and software system for creating beautiful interaction with sensors and sound. This project proposes to provide restructuring and improvement of existing Bela Software Code to allow for compatibility and easier transition to newer TI chips (like in the BBAI).</p>
 </article>
