deploy: bf854a5f69aec9f4547902751e475389ecb55a60

--- a/projects/index.html
+++ b/projects/index.html
@@ -29,6 +29,7 @@ A collection of my projects
 </div>
 <nav>
 <ul>
+<li><a href=https://dhruvagole.tech/projects/opensource/>Open Source</a></li>
 <li>
 <a href=#pico-dev-board>Pico Dev Board</a>
 </li>
