deploy: f974ec4392ad5a09c98e19581b030809f194f502

--- a/projects/index.html
+++ b/projects/index.html
@@ -29,6 +29,9 @@ A collection of my projects
 </div>
 <nav>
 <ul>
+<li>
+<a href=#internships>Internships</a>
+</li>
 <li><a href=https://dhruvagole.tech/projects/opensource/>Open Source</a></li>
 <li>
 <a href=#pico-dev-board>Pico Dev Board</a>
@@ -40,6 +43,26 @@ A collection of my projects
 </nav>
 </header>
 <div id=main>
+<article id=internships>
+<h2 class=major>Internships</h2>
+<span class="image main"><img src alt></span>
+<h3 id=augmented-labs>Augmented Labs</h3>
+<span class="image fit"><img src=/images/bela-certi.png alt></span>
+<h3 id=finemen-india>Finemen India</h3>
+<ul>
+<li>Made a working prototype of an LTE based data logger using MQTT protocol which enables remoteIoT applications for customers</li>
+<li>Hardware components used were the Microcontroller ESP32, SIMCOM7600 and ADS1115 ADC.</li>
+<li>C programming and communication protocols (ie. I2C, UART, etc.) were applied and the ESP-IDFframework was used to develop firmware for ESP32.</li>
+</ul>
+<span class="image fit"><img src=/images/fdi-certi.png alt></span>
+<h3 id=cdrc-vjti>CDRC, VJTI</h3>
+<ul>
+<li>Worked with a team of 5 members to research and implement Feeder protection Relay TestingusingHardware-in-loop simulation of a Power System fault.</li>
+<li>Implemented a circuit that could amplify a 5V analog signal by upto 20 times.</li>
+<li>gained industry exposure into Feeder Protection Relay testing requirements.</li>
+</ul>
+<span class="image fit"><img src=/images/Dhruva_CDRC_certi-1.png alt></span>
+</article>
 <article id=pico-dev-board>
 <h2 class=major>Pico Dev Board</h2>
 <span class="image main"><img src alt></span>
