--- a/projects/index.html
+++ b/projects/index.html
@@ -46,6 +46,18 @@ A collection of my projects
 <article id=internships>
 <h2 class=major>Internships</h2>
 <span class="image main"><img src alt></span>
+<h3 id=skillset-summary>Skillset Summary</h3>
+<ul>
+<li>C++</li>
+<li>C</li>
+<li>Using Embedded Linux</li>
+<li>Device Tree</li>
+<li>ESP-IDF</li>
+<li>MATLAB + Simulink</li>
+<li>Python</li>
+<li>Git</li>
+<li>KiCAD</li>
+</ul>
 <h3 id=augmented-labs>Augmented Labs</h3>
 <span class="image fit"><img src=/images/bela-certi.png alt></span>
 <h3 id=finemen-india>Finemen India</h3>
