deploy: 1ac452cc34a8ccc7897ce93688ffb664593ab26a

--- a/connect/index.html
+++ b/connect/index.html
@@ -39,6 +39,7 @@
 <p><a href=https://github.com/dhruvag2000>Github</a></p>
 <p><a href=https://www.linkedin.com/in/dhruva-gole/>LinkedIn</a></p>
 <p><a href=https://twitter.com/DhruvaGole>Twitter</a></p>
+<p><a href=mailto:goledhruva@gmail.com>Email</a></p>
 </article>
 </div>
 <footer id=footer>
