deploy: 127bad18547ff48a190b68f072665b73832fd087

--- a/projects/index.html
+++ b/projects/index.html
@@ -30,12 +30,12 @@ A collection of my projects
 <nav>
 <ul>
 <li>
+<a href=#rp2040-dev-board> RP2040 Dev Board</a>
+</li>
+<li>
 <a href=#internships>Internships</a>
 </li>
 <li><a href=https://dhruvagole.tech/projects/opensource/>Open Source</a></li>
-<li>
-<a href=#pico-dev-board>Pico Dev Board</a>
-</li>
 <li>
 <a href=#weather-monitor>Weather Monitor</a>
 </li>
@@ -43,6 +43,15 @@ A collection of my projects
 </nav>
 </header>
 <div id=main>
+<article id=rp2040-dev-board>
+<h2 class=major> RP2040 Dev Board</h2>
+<span class="image main"><img src alt></span>
+<p>Link to project: <a href=https://github.com/DhruvaG2000/RP2040_Dev_Board>RP2040_Dev_Board</a></p>
+<p>
+<span class="image fit"><img src=https://raw.githubusercontent.com/DhruvaG2000/RP2040_Dev_Board/main/photos/picoDevR0_firstPreview.png alt></span>
+<span class="image fit"><img src=https://raw.githubusercontent.com/DhruvaG2000/RP2040_Dev_Board/main/photos/rp2040-pinout.png alt></span>
+</p>
+</article>
 <article id=internships>
 <h2 class=major>Internships</h2>
 <span class="image main"><img src alt></span>
@@ -74,15 +83,6 @@ A collection of my projects
 <li>gained industry exposure into Feeder Protection Relay testing requirements.</li>
 </ul>
 <span class="image fit"><img src=/images/Dhruva_CDRC_certi-1.png alt></span>
-</article>
-<article id=pico-dev-board>
-<h2 class=major>Pico Dev Board</h2>
-<span class="image main"><img src alt></span>
-<p>Link to project: <a href=https://github.com/DhruvaG2000/RP2040_Dev_Board>RP2040_Dev_Board</a></p>
-<p>
-<span class="image fit"><img src=https://raw.githubusercontent.com/DhruvaG2000/RP2040_Dev_Board/main/photos/picoDevR0_firstPreview.png alt></span>
-<span class="image fit"><img src=https://raw.githubusercontent.com/DhruvaG2000/RP2040_Dev_Board/main/photos/rp2040-pinout.png alt></span>
-</p>
 </article>
 <article id=weather-monitor>
 <h2 class=major>Weather Monitor</h2>
