--- a/projects/rp2040/index.html
+++ b/projects/rp2040/index.html
@@ -1,6 +1,6 @@
 <!doctype html><html>
 <head>
-<title>Pico Dev Board</title>
+<title> RP2040 Dev Board</title>
 <meta charset=utf-8>
 <meta name=viewport content="width=device-width,initial-scale=1,user-scalable=no">
 <link rel=stylesheet href=https://dhruvagole.tech/assets/css/main.css>
