deploy: 17e61ed9cc47b79cf11ef4dc7b6bfce7165611ef

--- a/projects/more1/index.html
+++ b/projects/more1/index.html
@@ -1,12 +1,12 @@
 <!doctype html><html>
 <head>
-<title>Connect</title>
+<title>more projects</title>
 <meta charset=utf-8>
 <meta name=viewport content="width=device-width,initial-scale=1,user-scalable=no">
 <link rel=stylesheet href=https://dhruvagole.tech/assets/css/main.css>
-<link rel=canonical href=https://dhruvagole.tech/connect/>
+<link rel=canonical href=https://dhruvagole.tech/projects/more1/>
 <noscript><link rel=stylesheet href=https://dhruvagole.tech/assets/css/noscript.css></noscript>
-<style>:root{--site-background:url("https://dhruvagole.tech/images/coffee.png")}</style>
+<style>:root{--site-background:url("https://dhruvagole.tech/images/darkckt.jpeg")}</style>
 <script src=https://identity.netlify.com/v1/netlify-identity-widget.js></script>
 </head>
 <body class=is-preload>
@@ -15,31 +15,44 @@
 <div class=logo>
 <a href=/>
 <span class=icon>
-<img src=../images/dot.png>
+<img src=../../images/dot.png>
 </span>
 </a>
 </div>
 <div class=content>
 <div class=inner>
-<h1>Connect</h1>
+<h1>more projects</h1>
+<p>
+page 2 of my projects
+</p>
 </div>
 </div>
 <nav>
 <ul>
 <li>
-<a href=#social-media>Social Media</a>
+<a href=#rp2040-dev-board> RP2040 Dev Board</a>
+</li>
+<li><a href=https://dhruvagole.tech/projects/more1/more2/>more projects</a></li>
+<li>
+<a href=#weather-monitor>Weather Monitor</a>
 </li>
 </ul>
 </nav>
 </header>
 <div id=main>
-<article id=social-media>
-<h2 class=major>Social Media</h2>
+<article id=rp2040-dev-board>
+<h2 class=major> RP2040 Dev Board</h2>
 <span class="image main"><img src alt></span>
-<p><a href=https://github.com/dhruvag2000>Github</a></p>
-<p><a href=https://www.linkedin.com/in/dhruva-gole/>LinkedIn</a></p>
-<p><a href=https://twitter.com/DhruvaGole>Twitter</a></p>
-<p><a href=mailto:goledhruva@gmail.com>Email</a></p>
+<p>Link to project: <a href=https://github.com/DhruvaG2000/RP2040_Dev_Board>RP2040_Dev_Board</a></p>
+<p>
+<span class="image fit"><img src=https://raw.githubusercontent.com/DhruvaG2000/RP2040_Dev_Board/main/photos/picoDevR0_firstPreview.png alt></span>
+<span class="image fit"><img src=https://raw.githubusercontent.com/DhruvaG2000/RP2040_Dev_Board/main/photos/rp2040-pinout.png alt></span>
+</p>
+</article>
+<article id=weather-monitor>
+<h2 class=major>Weather Monitor</h2>
+<span class="image main"><img src alt></span>
+<p>Link to Project: <a href=https://github.com/DhruvaG2000/ESP32_wifiDHT11>ESP32 Wifi DHT</a></p>
 </article>
 </div>
 <footer id=footer>
