--- a/projects/more1/more2/index.html
+++ b/projects/more1/more2/index.html
@@ -1,29 +1,39 @@
 <!doctype html><html>
 <head>
-<title>Weather Monitor</title>
+<title>more projects</title>
 <meta charset=utf-8>
 <meta name=viewport content="width=device-width,initial-scale=1,user-scalable=no">
 <link rel=stylesheet href=https://dhruvagole.tech/assets/css/main.css>
-<link rel=canonical href=https://dhruvagole.tech/projects/dht11/>
+<link rel=canonical href=https://dhruvagole.tech/projects/more1/more2/>
 <noscript><link rel=stylesheet href=https://dhruvagole.tech/assets/css/noscript.css></noscript>
-<style>:root{--site-background:url("https://dhruvagole.tech/images/bg.jpg")}</style>
+<style>:root{--site-background:url("https://dhruvagole.tech/images/darkckt.jpeg")}</style>
 <script src=https://identity.netlify.com/v1/netlify-identity-widget.js></script>
 </head>
 <body class=is-preload>
 <div id=wrapper>
 <header id=header>
 <div class=logo>
-<span class="icon fa-gem"></span>
+<a href=/>
+<span class=icon>
+<img src=../../../images/dot.png>
+</span>
+</a>
 </div>
 <div class=content>
 <div class=inner>
-<h1><a href=/>Go Home</a></h1>
+<h1>more projects</h1>
 <p>
-Nothing to see here
+page 3 of my projects
 </p>
 </div>
 </div>
+<nav>
+<ul>
+</ul>
+</nav>
 </header>
+<div id=main>
+</div>
 <footer id=footer>
 <p class=copyright>&copy; Design: <a href=https://github.com/d-asnaghi>d-asnaghi</a> and <a href=https://html5up.net>HTML5 UP</a>.</p>
 </footer>
