--- a/blogs/ads1115/index.html
+++ b/blogs/ads1115/index.html
@@ -1,10 +1,10 @@
 <!doctype html><html>
 <head>
-<title> RP2040 Dev Board</title>
+<title>ESP32 Voltmeter</title>
 <meta charset=utf-8>
 <meta name=viewport content="width=device-width,initial-scale=1,user-scalable=no">
 <link rel=stylesheet href=https://dhruvagole.tech/assets/css/main.css>
-<link rel=canonical href=https://dhruvagole.tech/projects/rp2040/>
+<link rel=canonical href=https://dhruvagole.tech/blogs/ads1115/>
 <noscript><link rel=stylesheet href=https://dhruvagole.tech/assets/css/noscript.css></noscript>
 <style>:root{--site-background:url("https://dhruvagole.tech/images/bg.jpg")}</style>
 <script src=https://identity.netlify.com/v1/netlify-identity-widget.js></script>
