--- a/projects/index.html
+++ b/projects/index.html
@@ -15,7 +15,7 @@
 <div class=logo>
 <a href=/>
 <span class=icon>
-<img src>
+<img src=../images/dot.png>
 </span>
 </a>
 </div>
@@ -30,28 +30,14 @@ A collection of my projects
 <nav>
 <ul>
 <li>
-<a href=#rp2040-dev-board> RP2040 Dev Board</a>
-</li>
-<li>
 <a href=#internships>Internships</a>
 </li>
+<li><a href=https://dhruvagole.tech/projects/more1/>more projects</a></li>
 <li><a href=https://dhruvagole.tech/projects/opensource/>Open Source</a></li>
-<li>
-<a href=#weather-monitor>Weather Monitor</a>
-</li>
 </ul>
 </nav>
 </header>
 <div id=main>
-<article id=rp2040-dev-board>
-<h2 class=major> RP2040 Dev Board</h2>
-<span class="image main"><img src alt></span>
-<p>Link to project: <a href=https://github.com/DhruvaG2000/RP2040_Dev_Board>RP2040_Dev_Board</a></p>
-<p>
-<span class="image fit"><img src=https://raw.githubusercontent.com/DhruvaG2000/RP2040_Dev_Board/main/photos/picoDevR0_firstPreview.png alt></span>
-<span class="image fit"><img src=https://raw.githubusercontent.com/DhruvaG2000/RP2040_Dev_Board/main/photos/rp2040-pinout.png alt></span>
-</p>
-</article>
 <article id=internships>
 <h2 class=major>Internships</h2>
 <span class="image main"><img src alt></span>
@@ -83,11 +69,6 @@ A collection of my projects
 <li>gained industry exposure into Feeder Protection Relay testing requirements.</li>
 </ul>
 <span class="image fit"><img src=/images/Dhruva_CDRC_certi-1.png alt></span>
-</article>
-<article id=weather-monitor>
-<h2 class=major>Weather Monitor</h2>
-<span class="image main"><img src alt></span>
-<p>Link to Project: <a href=https://github.com/DhruvaG2000/ESP32_wifiDHT11>ESP32 Wifi DHT</a></p>
 </article>
 </div>
 <footer id=footer>
