deploy: d857e6decff7fc792cf400bf522d785cc7e5cd11

--- a/blogs/index.html
+++ b/blogs/index.html
@@ -217,6 +217,8 @@ The factorial of 4 is 24[Inferior 1 (process 15039) exited normally]
 </p>
 <p><a href=https://dhruvag2000.github.io/Blog-GSoC21/>GSoC2021: Bela support for BeagleBone AI</a></p>
 <p>Bela is a hardware and software system for creating beautiful interaction with sensors and sound. This project proposes to provide restructuring and improvement of existing Bela Software Code to allow for compatibility and easier transition to newer TI chips (like in the BBAI).</p>
+<p>The <em>final product</em> as a result of this project is&mldr;</p>
+<span class="image fit"><img src=/images/BELA-AI.png alt></span>
 </article>
 </div>
 <footer id=footer>
