--- a/blogs/index.html
+++ b/blogs/index.html
@@ -15,7 +15,7 @@
 <div class=logo>
 <a href=/>
 <span class=icon>
-<img src=https://developers.google.com/open-source/gsoc/resources/downloads/GSoC-icon-192.png>
+<img src=../images/dot.png>
 </span>
 </a>
 </div>
