--- a/connect/index.html
+++ b/connect/index.html
@@ -39,7 +39,7 @@
 <article id=resume>
 <h2 class=major>Resume</h2>
 <span class="image main"><img src alt></span>
-<span class="image fit"><img src=/images/Dhruva-CV_17Jul-1.png alt></span>
+<span class="image fit"><img src=/images/Dhruva-CV alt></span>
 </article>
 <article id=social-media>
 <h2 class=major>Social Media</h2>
