--- a/projects/index.html
+++ b/projects/index.html
@@ -72,6 +72,7 @@ A collection of my projects
 </article>
 </div>
 <footer id=footer>
+<p class=copyright>&copy; <a href=https://github.com/dhruvag2000>DhruvaG2000</p>
 <p class=copyright>&copy; Design: <a href=https://github.com/d-asnaghi>d-asnaghi</a> and <a href=https://html5up.net>HTML5 UP</a>.</p>
 </footer>
 </div>
