--- a/projects/opensource/index.html
+++ b/projects/opensource/index.html
@@ -55,6 +55,7 @@ A summary of all my Open Source Contributions
 </article>
 </div>
 <footer id=footer>
+<p class=copyright>&copy; <a href=https://github.com/dhruvag2000>DhruvaG2000</p>
 <p class=copyright>&copy; Design: <a href=https://github.com/d-asnaghi>d-asnaghi</a> and <a href=https://html5up.net>HTML5 UP</a>.</p>
 </footer>
 </div>
