deploy: aac51b2570db2897a7b3753219a058220018c3ba

--- a/connect/index.html
+++ b/connect/index.html
@@ -27,6 +27,9 @@
 <nav>
 <ul>
 <li>
+<a href=#contact>Contact</a>
+</li>
+<li>
 <a href=#resume>Resume</a>
 </li>
 <li>
@@ -36,6 +39,22 @@
 </nav>
 </header>
 <div id=main>
+<article id=contact>
+<h2 class=major>Contact</h2>
+<span class="image main"><img src alt></span>
+<link rel=stylesheet href=/CSS/form.css>
+<form action=https://forms.gle/ma8FskZnKTHkSasQA method=post target=hidden_iframe onsubmit="submitted=!0">
+<label>Name*</label>
+<input type=email placeholder=Email* class=form-input name=entry.2005620554 required>
+<label>Name*</label>
+<input type=text placeholder="Email address*" class=form-input name=entry.1166974658 required>
+<label>Subject*</label>
+<input type=text placeholder=Subject* class=form-input name=entry.1043109960 required>
+<label>Message</label>
+<textarea rows=5 placeholder=Message class=form-input name=entry.839337160></textarea>
+<button type=submit>Send</button>
+</form>
+</article>
 <article id=resume>
 <h2 class=major>Resume</h2>
 <span class="image main"><img src alt></span>
