deploy: a065c2345fb83d71c9656af10af746bb9b7f0c5a

--- a/connect/index.html
+++ b/connect/index.html
@@ -43,13 +43,17 @@
 <h2 class=major>Contact</h2>
 <span class="image main"><img src alt></span>
 <link rel=stylesheet href=/CSS/form.css>
-<form action=https://forms.gle/ma8FskZnKTHkSasQA method=post target=hidden_iframe onsubmit="submitted=!0">
+<script type=text/javascript>var submitted=!1</script>
+<iframe name=hidden_iframe id=hidden_iframe style=display:none onload="submitted&&(window.location='#social-media')"></iframe>
+<form action=https://docs.google.com/forms/d/e/1FAIpQLSdTFZ8lV4IH6ossSXuJLqyR7tpT_uU5cONPZyoBrJKP92halQ/formResponse method=post target=hidden_iframe onsubmit="submitted=!0">
+</form>
+<form action=https://docs.google.com/forms/d/e/1FAIpQLSdTFZ8lV4IH6ossSXuJLqyR7tpT_uU5cONPZyoBrJKP92halQ/formResponse method=post target=hidden_iframe onsubmit="submitted=!0">
 <label>Name*</label>
-<input type=email placeholder=Email* class=form-input name=entry.2005620554 required>
-<label>Name*</label>
-<input type=text placeholder="Email address*" class=form-input name=entry.1166974658 required>
+<input type=text placeholder=Name* class=form-input name=entry.2005620554 required>
+<label>Email*</label>
+<input type=email placeholder="Email address*" class=form-input name=entry.1045781291 required>
 <label>Subject*</label>
-<input type=text placeholder=Subject* class=form-input name=entry.1043109960 required>
+<input type=text placeholder=Subject* class=form-input name=entry.1166974658 required>
 <label>Message</label>
 <textarea rows=5 placeholder=Message class=form-input name=entry.839337160></textarea>
 <button type=submit>Send</button>
