deploy: 417eb2c9ed1b75d88d4ad6bd554614a955b45803

--- a/projects/more1/more2/index.html
+++ b/projects/more1/more2/index.html
@@ -35,8 +35,8 @@ page 3 of my projects
 <div id=main>
 </div>
 <footer id=footer>
-<p class=copyright>&copy; <a href=https://github.com/dhruvag2000>DhruvaG2000</p>
-<p class=copyright>&copy; Design: <a href=https://github.com/d-asnaghi>d-asnaghi</a> and <a href=https://html5up.net>HTML5 UP</a>.</p>
+<p class=copyright>&copy; <a href=https://github.com/dhruvag2000>2021 Dhruva Gole</p>
+<p class=copyright>&copy; By- <a href=https://github.com/d-asnaghi>d-asnaghi</a> and <a href=https://html5up.net>HTML5 UP</a>.</p>
 </footer>
 </div>
 <div id=bg></div>
