--- a/projects/more1/index.html
+++ b/projects/more1/index.html
@@ -56,8 +56,8 @@ page 2 of my projects
 </article>
 </div>
 <footer id=footer>
-<p class=copyright>&copy; <a href=https://github.com/dhruvag2000>DhruvaG2000</p>
-<p class=copyright>&copy; Design: <a href=https://github.com/d-asnaghi>d-asnaghi</a> and <a href=https://html5up.net>HTML5 UP</a>.</p>
+<p class=copyright>&copy; <a href=https://github.com/dhruvag2000>2021 Dhruva Gole</p>
+<p class=copyright>&copy; By- <a href=https://github.com/d-asnaghi>d-asnaghi</a> and <a href=https://html5up.net>HTML5 UP</a>.</p>
 </footer>
 </div>
 <div id=bg></div>
