--- a/connect/index.html
+++ b/connect/index.html
@@ -67,6 +67,8 @@
 <article id=social-media>
 <h2 class=major>Social Media</h2>
 <span class="image main"><img src alt></span>
+<p>Thanks,
+You can connect with me on: </p>
 <p><a href=https://github.com/dhruvag2000>Github</a></p>
 <p><a href=https://www.linkedin.com/in/dhruva-gole/>LinkedIn</a></p>
 <p><a href=https://twitter.com/DhruvaGole>Twitter</a></p>
