--- a/connect/index.html
+++ b/connect/index.html
@@ -69,10 +69,11 @@
 <span class="image main"><img src alt></span>
 <p>Thanks,
 You can connect with me on: </p>
-<p><a href=https://github.com/dhruvag2000>Github</a></p>
-<p><a href=https://www.linkedin.com/in/dhruva-gole/>LinkedIn</a></p>
-<p><a href=https://twitter.com/DhruvaGole>Twitter</a></p>
-<p><a href=mailto:goledhruva@gmail.com>Email</a></p>
+<p><a href=https://github.com/dhruvag2000>Github: DhruvaG2000</a></p>
+<p><a href=https://www.linkedin.com/in/dhruva-gole/>LinkedIn: Dhruva Gole</a></p>
+<p><a href=https://twitter.com/DhruvaGole>Twitter: DhruvaGole</a>
+or
+<a href=mailto:goledhruva@gmail.com>via email</a></p>
 </article>
 </div>
 <footer id=footer>
