--- a/connect/index.html
+++ b/connect/index.html
@@ -29,12 +29,7 @@
 <li>
 <a href=#contact>Contact</a>
 </li>
-<li>
-<a href=#resume>Resume</a>
-</li>
-<li>
-<a href=#social-media>Social Media</a>
-</li>
+<li><a href=https://dhruvagole.tech/connect/more/>More...</a></li>
 </ul>
 </nav>
 </header>
@@ -44,7 +39,7 @@
 <span class="image main"><img src alt></span>
 <link rel=stylesheet href=/CSS/form.css>
 <script type=text/javascript>var submitted=!1</script>
-<iframe name=hidden_iframe id=hidden_iframe style=display:none onload="submitted&&(window.location='#social-media')"></iframe>
+<iframe name=hidden_iframe id=hidden_iframe style=display:none onload="submitted&&(window.location='more/#social-media#social-media')"></iframe>
 <form action=https://docs.google.com/forms/d/e/1FAIpQLSdTFZ8lV4IH6ossSXuJLqyR7tpT_uU5cONPZyoBrJKP92halQ/formResponse method=post target=hidden_iframe onsubmit="submitted=!0">
 </form>
 <form action=https://docs.google.com/forms/d/e/1FAIpQLSdTFZ8lV4IH6ossSXuJLqyR7tpT_uU5cONPZyoBrJKP92halQ/formResponse method=post target=hidden_iframe onsubmit="submitted=!0">
@@ -58,22 +53,6 @@
 <textarea rows=5 placeholder=Message class=form-input name=entry.839337160></textarea>
 <button type=submit>Send</button>
 </form>
-</article>
-<article id=resume>
-<h2 class=major>Resume</h2>
-<span class="image main"><img src alt></span>
-<span class="image fit"><img src=/images/Dhruva-CV.png alt></span>
-</article>
-<article id=social-media>
-<h2 class=major>Social Media</h2>
-<span class="image main"><img src alt></span>
-<p>Thanks,
-You can connect with me on: </p>
-<p><a href=https://github.com/dhruvag2000>Github: DhruvaG2000</a></p>
-<p><a href=https://www.linkedin.com/in/dhruva-gole/>LinkedIn: Dhruva Gole</a></p>
-<p><a href=https://twitter.com/DhruvaGole>Twitter: DhruvaGole</a>
-or
-<a href=mailto:goledhruva@gmail.com>via email</a></p>
 </article>
 </div>
 <footer id=footer>
