--- a/connect/more/cv/index.html
+++ b/connect/more/cv/index.html
@@ -1,10 +1,10 @@
 <!doctype html><html>
 <head>
-<title>Social Media</title>
+<title>Resume</title>
 <meta charset=utf-8>
 <meta name=viewport content="width=device-width,initial-scale=1,user-scalable=no">
 <link rel=stylesheet href=https://dhruvagole.tech/assets/css/main.css>
-<link rel=canonical href=https://dhruvagole.tech/connect/connect/>
+<link rel=canonical href=https://dhruvagole.tech/connect/more/cv/>
 <noscript><link rel=stylesheet href=https://dhruvagole.tech/assets/css/noscript.css></noscript>
 <style>:root{--site-background:url("https://dhruvagole.tech/images/bg.jpg")}</style>
 <script src=https://identity.netlify.com/v1/netlify-identity-widget.js></script>
