deploy: b76309e5664d74a0984e22a78ace13ea7cc99296

--- a/projects/opensource/index.html
+++ b/projects/opensource/index.html
@@ -32,6 +32,9 @@ A summary of all my Open Source Contributions
 <li>
 <a href=#contributions>Contributions</a>
 </li>
+<li>
+<a href=#gsoc2021>GSoC2021</a>
+</li>
 </ul>
 </nav>
 </header>
@@ -52,6 +55,16 @@ A summary of all my Open Source Contributions
 <li>Created the <a href=https://github.com/DhruvaG2000/BeagleBoard-DeviceTrees/blob/v4.19.x-ti-overlays/src/arm/overlays/BBAI-BELA-00A1.dts>BBAI-BELA Overlay to support the BELA Cape on BBAI using the Cape Compatibility Layer</a>.</li>
 <li>Created PruManager.cpp and PruManager.h to help port the Bela Code to AM572x and also provide backward compatibility under a single roof. <a href=https://github.com/giuliomoro/Bela-dhruva/pull/1>click here</a></li>
 </ul>
+</article>
+<article id=gsoc2021>
+<h2 class=major>GSoC2021</h2>
+<span class="image main"><img src alt></span>
+<p>
+<span class="image fit"><img src=/images/BELA-AI.png alt></span>
+</p>
+<p><a href=https://dhruvag2000.github.io/Blog-GSoC21/>GSoC2021: Bela support for BeagleBone AI</a></p>
+<p>Bela is a hardware and software system for creating beautiful interaction with sensors and sound. This project proposes to provide restructuring and improvement of existing Bela Software Code to allow for compatibility and easier transition to newer TI chips (like in the BBAI).</p>
+<p>The <em>achieved milestons</em> this project can be found on my <a href>official gsoc project report</a></p>
 </article>
 </div>
 <footer id=footer>
