--- a/projects/index.html
+++ b/projects/index.html
@@ -53,7 +53,8 @@ A collection of my projects
 <li>Git</li>
 <li>KiCAD</li>
 </ul>
-<h3 id=augmented-labs>Augmented Labs</h3>
+<h3 id=google-summer-of-code>Google Summer of Code</h3>
+<span class="image fit"><img src=/images/Screenshot_20210904-083557_AdobeAcrobat.png alt></span>
 <span class="image fit"><img src=/images/bela-certi.png alt></span>
 <h3 id=finemen-india>Finemen India</h3>
 <ul>
