deploy: 19593ae02b74208c5b4688c7c949beb00fdd7580

--- a/projects/index.html
+++ b/projects/index.html
@@ -54,7 +54,7 @@ A collection of my projects
 <li>KiCAD</li>
 </ul>
 <h3 id=google-summer-of-code>Google Summer of Code</h3>
-<span class="image fit"><img src=/images/Screenshot_20210904-083557_AdobeAcrobat.png alt></span>
+<span class="image fit"><img src=/images/Screenshot_20210904-083557_Adobe%20Acrobat.png alt></span>
 <span class="image fit"><img src=/images/bela-certi.png alt></span>
 <h3 id=finemen-india>Finemen India</h3>
 <ul>
