deploy: 398f400b5f54d503adadf02348cbbf32098c5b5c

--- a/blogs/index.html
+++ b/blogs/index.html
@@ -26,6 +26,7 @@
 </div>
 <nav>
 <ul>
+<li><a href=https://dhruvagole.tech/blogs/more/>Blogs</a></li>
 <li>
 <a href=#esp32-voltmeter>ESP32 Voltmeter</a>
 </li>
