--- a/blogs/more/temp_oled/index.html
+++ b/blogs/more/temp_oled/index.html
@@ -1,11 +1,10 @@
 <!doctype html><html>
 <head>
-<meta name=generator content="Hugo 0.88.1">
-<title>Dhruva Gole</title>
+<title>OLED Temperature</title>
 <meta charset=utf-8>
 <meta name=viewport content="width=device-width,initial-scale=1,user-scalable=no">
 <link rel=stylesheet href=https://dhruvagole.tech/assets/css/main.css>
-<link rel=canonical href=https://dhruvagole.tech/>
+<link rel=canonical href=https://dhruvagole.tech/blogs/more/temp_oled/>
 <noscript><link rel=stylesheet href=https://dhruvagole.tech/assets/css/noscript.css></noscript>
 <style>:root{--site-background:url("https://dhruvagole.tech/images/bg.jpg")}</style>
 <script src=https://identity.netlify.com/v1/netlify-identity-widget.js></script>
@@ -14,30 +13,17 @@
 <div id=wrapper>
 <header id=header>
 <div class=logo>
-<a href=/>
-<span class=icon>
-<img src>
-</span>
-</a>
+<span class="icon fa-gem"></span>
 </div>
 <div class=content>
 <div class=inner>
-<h1>Dhruva Gole</h1>
+<h1><a href=/>Go Home</a></h1>
 <p>
-Electrical Engineer, Embedded Developer
+Nothing to see here
 </p>
 </div>
 </div>
-<nav>
-<ul>
-<li><a href=https://dhruvagole.tech/blogs/>Blogs</a></li>
-<li><a href=https://dhruvagole.tech/connect/>Connect</a></li>
-<li><a href=https://dhruvagole.tech/projects/>Projects</a></li>
-</ul>
-</nav>
 </header>
-<div id=main>
-</div>
 <footer id=footer>
 <p class=copyright>&copy; <a href=https://github.com/dhruvag2000>2021 Dhruva Gole</p>
 </footer>
