deploy: 436582bb7972beb9ba1c03c0f65cf643c8aa833b

--- a/projects/opensource/index.html
+++ b/projects/opensource/index.html
@@ -43,9 +43,13 @@ A summary of all my Open Source Contributions
 <h2 class=major>Contributions</h2>
 <span class="image main"><img src alt></span>
 <p>I have contributed to open source in the following places:</p>
+<h2 id=call-for-code>Call for Code</h2>
 <ul>
-<li>Writing a blog for SRA VJTI: <a href=https://github.com/SRA-VJTI/blog/pull/1>gdb-for-noobs PR#1</a>.</li>
-<li>Added instructions for using an ADC library for UncleRus/esp-idf-lib in <a href=https://github.com/UncleRus/esp-idf-lib/pull/163>PR#163</a>.</li>
+<li>Achieve millisecond level time sync with NTP on the ESP32. <a href=https://github.com/openeew/openeew-firmware/pull/40>PR#40: Adopt the ESPNtpClient library</a></li>
+<li>setup pio build workflow for WatsonIOT in <a href=https://github.com/openeew/openeew-firmware/pull/39>PR#39</a>.</li>
+</ul>
+<h2 id=gsoc-2021>GSoC 2021</h2>
+<ul>
 <li>Tried to add librobotcontrol support to the BeagleBone AI in <a href=https://github.com/beagleboard/librobotcontrol/pull/204>PR#204</a>.</li>
 <li>Added a device tree overlay for the audio cape on the BeagleBone AI using the Cape Compatiblity layer and merged to the official BeagleBoard-Device Trees repo in <a href=https://github.com/beagleboard/BeagleBoard-DeviceTrees/pull/33>PR#33</a>.</li>
 <li>Fixed <a href=https://github.com/beagleboard/BeagleBoard-DeviceTrees/issues/34>issue#34</a> in the audio overlay for the BBAI that was causing a minor offset in the output audio frequency in <a href=https://github.com/beagleboard/BeagleBoard-DeviceTrees/pull/36>PR#36</a>.</li>
@@ -54,6 +58,11 @@ A summary of all my Open Source Contributions
 <li>Ported Prudebug having the <code>j</code> instruction in <a href=https://github.com/giuliomoro/prudebug/pull/2>PR#2</a> in <code>giuliomoro/prudebug</code></li>
 <li>Created the <a href=https://github.com/DhruvaG2000/BeagleBoard-DeviceTrees/blob/v4.19.x-ti-overlays/src/arm/overlays/BBAI-BELA-00A1.dts>BBAI-BELA Overlay to support the BELA Cape on BBAI using the Cape Compatibility Layer</a>.</li>
 <li>Created PruManager.cpp and PruManager.h to help port the Bela Code to AM572x and also provide backward compatibility under a single roof. <a href=https://github.com/giuliomoro/Bela-dhruva/pull/1>click here</a></li>
+</ul>
+<h2 id=other>Other</h2>
+<ul>
+<li>Writing a blog for SRA VJTI: <a href=https://github.com/SRA-VJTI/blog/pull/1>gdb-for-noobs PR#1</a>.</li>
+<li>Added instructions for using an ADC library for UncleRus/esp-idf-lib in <a href=https://github.com/UncleRus/esp-idf-lib/pull/163>PR#163</a>.</li>
 </ul>
 </article>
 <article id=gsoc2021>
