deploy: d4f1117d985dcc98f93cae20d62be9a25f9ec944

--- a/projects/opensource/index.html
+++ b/projects/opensource/index.html
@@ -43,10 +43,11 @@ A summary of all my Open Source Contributions
 <h2 class=major>Contributions</h2>
 <span class="image main"><img src alt></span>
 <p>I have contributed to open source in the following places:</p>
-<h2 id=call-for-code>Call for Code</h2>
+<h2 id=ibm--call-for-code>IBM- Call for Code</h2>
 <ul>
 <li>Achieve millisecond level time sync with NTP on the ESP32. <a href=https://github.com/openeew/openeew-firmware/pull/40>PR#40: Adopt the ESPNtpClient library</a></li>
 <li>setup pio build workflow for WatsonIOT in <a href=https://github.com/openeew/openeew-firmware/pull/39>PR#39</a>.</li>
+<li>identify reason behind failure and fix travis build issue. <a href=https://github.com/Call-for-Code/ClusterDuck-Protocol/pull/248>PR#248</a></li>
 </ul>
 <h2 id=gsoc-2021>GSoC 2021</h2>
 <ul>
@@ -61,6 +62,7 @@ A summary of all my Open Source Contributions
 </ul>
 <h2 id=other>Other</h2>
 <ul>
+<li>Update <strong>Zephyr RTOS</strong> Documentation: <a href=https://github.com/zephyrproject-rtos/zephyr/pull/38542>boards: Arduino Nano BLE 33: update documentation PR#38542</a></li>
 <li>Writing a blog for SRA VJTI: <a href=https://github.com/SRA-VJTI/blog/pull/1>gdb-for-noobs PR#1</a>.</li>
 <li>Added instructions for using an ADC library for UncleRus/esp-idf-lib in <a href=https://github.com/UncleRus/esp-idf-lib/pull/163>PR#163</a>.</li>
 </ul>
